--- a/example-app/public/source/assets/dest/css/style.css
+++ b/example-app/public/source/assets/dest/css/style.css
@@ -4711,7 +4711,7 @@ html{overflow-x:hidden;}
 .auto-width-left ul li a{padding:0px;}
 .auto-width-right{width:41%;}
 .auto-width-right ul li a{padding:0px 4px;}
-.pull-left.auto-width:{width:auto!important;}
+.pull-left.auto-width{width:auto!important;}
 .beta-comp from{width:70%!important;}
 a#logo img{max-width:45%!important;}
 .beta-rotator canvas{width:98%!important;}
